--- a/Software/Quadcopter2/Quadcopter2.vcxproj.filters
+++ b/Software/Quadcopter2/Quadcopter2.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="__vm\.Quadcopter2.vsarduino.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ControlElements.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Controller.cpp">
